添加组件内容

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -109,3 +109,8 @@ html,body{
 .animation_opactiy{
     animation: backOpacity 2s ease-in-out infinite;
 }
+
+.icon{
+    width: 1.3rem;
+    height: 1.3rem;
+}
