--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -114,3 +114,17 @@ html,body{
     width: 1.3rem;
     height: 1.3rem;
 }
+
+.rating_page{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 202;
+    background:#f2f2f2;
+    padding-top: 1.95rem;
+    p, span{
+        font-family: Helvetica Neue,Tahoma,Arial;
+    }
+}
