--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,3 +1,5 @@
+@import 'src/style/mixin';
+
 body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, li, a, p, h1, h2, h3, h4,h5, h6, i, b, textarea, button, input, select, figure, figcaption, {
     padding: 0;
     margin: 0;
@@ -5,7 +7,7 @@ body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, l
     font-style: normal;
     text-decoration: none;
     border: none;
-    color: #333;
+    color:  $font-color;
     font-weight: normal;
     font-family: "Microsoft Yahei";
     box-sizing: border-box;
@@ -27,7 +29,7 @@ body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, l
 /*定义滚动条轨道 内阴影+圆角*/  
 ::-webkit-scrollbar-track  
 {  
-    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0);  
+    box-shadow: inset 0 0 1px rgba(0,0,0,0);  
     border-radius: 10px;  
     background-color: #F5F5F5;  
 }  
@@ -36,7 +38,7 @@ body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, l
 ::-webkit-scrollbar-thumb  
 {  
     border-radius: 10px;  
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);  
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);  
     background-color: #555;  
 }  
 
@@ -49,7 +51,7 @@ textarea { -webkit-appearance: none;}
 html,body{
     height: 100%;
     width: 100%;
-    background-color: #F5F5F5;
+    background-color: $background-color;
 }
 
 
@@ -110,11 +112,32 @@ html,body{
     animation: backOpacity 2s ease-in-out infinite;
 }
 
-.icon{
-    width: 1.3rem;
-    height: 1.3rem;
+.page{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding-top: 1.95rem;
+    z-index: 203;
+    background-color: $background-color;
+    p, span{
+        font-family: Helvetica Neue,Tahoma,Arial;
+    }
 }
-
+.light-page{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding-top: 1.95rem;
+    z-index: 203;
+    background-color: $background-light-color;
+    p, span{
+        font-family: Helvetica Neue,Tahoma,Arial;
+    }
+}
 .rating_page{
     position: absolute;
     top: 0;
@@ -122,9 +145,28 @@ html,body{
     right: 0;
     bottom: 0;
     z-index: 202;
-    background:#f2f2f2;
+    background:$background-color;
     padding-top: 1.95rem;
     p, span{
         font-family: Helvetica Neue,Tahoma,Arial;
     }
+}
+
+.icon{
+    @include wh(1.3rem,1.3rem);
+    fill: $icon-color;
+    .light{
+        fill: $icon-light-color;
+    }
+}
+
+// 页面切换动画
+.router-fade-enter-active,
+.router-fade-leave-active {
+	transition: opacity .3s;
+}
+
+.router-fade-enter,
+.router-fade-leave-active {
+	opacity: 0;
 }
