--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -1,12 +1,20 @@
-$blue: #3190e8;  
-$bc: #e4e4e4;
+$background-color:#F5F5F5; // 背景颜色
+$background-light-color:#fff; // 亮背景色
+$background-darklight-color:#fafafa; // 暗亮色背景
+$blue: #3190e8; // 蓝色 
+$blue-font-color:#fff; // 蓝色底字体颜色
+$border-color: #e4e4e4; // 边框颜色
+$font-color: #333; // 字体颜色
+$font-light-color:#666; // 字体亮色
+$icon-color:#bbb; // 图标颜色
+$icon-light-color:#fff; // 图标亮色
+$bc: #e4e4e4; // 边框颜色
 $fc:#fff;
-
 // 背景图片地址和大小
-@mixin bis($url) { 
-	background-image: url($url);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
+@mixin bis($url) {
+    background-image: url($url);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 @mixin borderRadius($radius) {
@@ -16,55 +24,55 @@ $fc:#fff;
     -o-border-radius: $radius;
     border-radius: $radius;
 }
+
 //定位全屏
-@mixin allcover{
-	position:absolute;
-	top:0;
-	right:0;
+@mixin allcover {
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 //定位上下左右居中
-@mixin center {  
-	position: absolute;
-	top: 50%;
+@mixin center {
+    position: absolute;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 //定位上下居中
-@mixin ct {  
-	position: absolute;
-	top: 50%;
+@mixin ct {
+    position: absolute;
+    top: 50%;
     transform: translateY(-50%);
 }
 
 //定位上下居中
-@mixin cl {  
-	position: absolute;
-	left: 50%;
+@mixin cl {
+    position: absolute;
+    left: 50%;
     transform: translateX(-50%);
 }
 
 //宽高
-@mixin wh($width, $height){
-	width: $width;
-	height: $height;
+@mixin wh($width, $height) {
+    width: $width;
+    height: $height;
 }
 
 //字体大小、行高、字体
-@mixin font($size, $line-height, $family: 'Microsoft YaHei') {  
-	font: #{$size}/#{$line-height} $family;
+@mixin font($size, $line-height, $family: 'Microsoft YaHei') {
+    font: #{$size}/#{$line-height} $family;
 }
 
 //字体大小，颜色
-@mixin sc($size, $color){
-	font-size: $size;
-	color: $color;
+@mixin sc($size, $color) {
+    font-size: $size;
+    color: $color;
 }
 
 //flex 布局和 子元素 对其方式
-@mixin fj($type: space-between){
-	display: flex;
-	justify-content: $type;
-
+@mixin fj($type: space-between) {
+    display: flex;
+    justify-content: $type;
 }
