--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -8,6 +8,7 @@ $font-color: #333; // 字体颜色
 $font-light-color:#666; // 字体亮色
 $icon-color:#bbb; // 图标颜色
 $icon-light-color:#fff; // 图标亮色
+$icon-color-active:#4aa5f0;
 $bc: #e4e4e4; // 边框颜色
 $fc:#fff;
 // 背景图片地址和大小
