添加出店和回店中商品列表样式

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -286,6 +286,11 @@ html,body{
         }
     }
 }
+.tab-container{
+    display: flex;
+    flex: 1;
+    overflow-y: auto;
+}
 
 .tab-choose-enter-active,
 .tab-choose-leave-active {
