--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -2,7 +2,9 @@ $background-color:#F5F5F5; // 背景颜色
 $background-light-color:#fff; // 亮背景色
 $background-darklight-color:#fafafa; // 暗亮色背景
 $blue: #3190e8; // 蓝色 
-$red:#f60; // 红色
+$red:#ff5f3e;
+$green:#6ac20b;
+$orange:#f90;
 $blue-font-color:#fff; // 蓝色底字体颜色
 $border-color: #e4e4e4; // 边框颜色
 $font-color: #333; // 字体颜色
