--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -412,8 +412,8 @@ small{
 }
 
 .m-sort{
-    background-color: #fff;
-    border-bottom: 0.025rem solid #f1f1f1;
+    background-color: $background-light-color;
+    border-bottom: 1px solid $border-color;
     position: fixed;
     top: 1.95rem;
     right: 0;
@@ -422,7 +422,6 @@ small{
     z-index: 13;
     box-sizing: border-box;
     .sort_item {
-        @include sc(0.55rem, #444);
         @include wh(33.3%, 1.6rem);
         text-align: center;
         line-height: 1rem;
@@ -430,18 +429,18 @@ small{
             @include wh(100%, 100%);
             position: relative;
             z-index: 14;
-            background-color: #fff;
+            background-color: $background-light-color;
             box-sizing: border-box;
-            padding-top: .3rem;
+            padding-top: .275rem;
             .sort_item_border {
-                height: 1rem;
-                border-right: 0.025rem solid $bc;
+                height: 1.05rem;
+                border-right: 0.025rem solid $border-color;
             }
         }
         .sort_icon {
             vertical-align: middle;
             transition: all .3s;
-            fill: #666;
+            fill: $font-color1;
         }
     }
     .choose_type {
@@ -472,38 +471,38 @@ small{
         display: flex;
         top: 1.6rem;
         left: 0;
-        border-top: 0.025rem solid $bc;
-        background-color: #fff;
+        border-top: 1px solid $border-color;
+        background-color: $background-light-color;
     }
     .category_container {
         .category_left {
             flex: 1;
-            background-color: #f1f1f1;
+            background-color: $background-color;
             height: 16rem;
             overflow-y: auto;
             span {
-                @include sc(0.5rem, #666);
+                @include sc(0.55rem, $font-color1);
                 line-height: 1.8rem;
             }
             .category_left_li {
                 @include fj;
-                padding: 0 0.5rem;
+                padding: 0 0.55rem;
                 .category_icon {
                     @include wh(.8rem, .8rem);
                     vertical-align: middle;
-                    margin-right: .2rem;
+                    margin-right: .275rem;
                 }
                 .category_count {
                     background-color: #ccc;
-                    @include sc(.4rem, #fff);
+                    @include sc(.45rem, #fff);
                     padding: 0 .1rem;
-                    border: 0.025rem solid #ccc;
                     border-radius: 0.8rem;
                     vertical-align: middle;
-                    margin-right: 0.25rem;
+                    margin-right: 0.275rem;
                 }
                 .category_arrow {
-                    vertical-align: middle;
+                    margin-top: .5rem;
+                    @include wh(.8rem, .8rem);
                 }
             }
             .category_active {
@@ -512,23 +511,24 @@ small{
         }
         .category_right {
             flex: 1;
-            background-color: #fff;
-            padding-left: 0.5rem;
+            background-color: $background-light-color;
+            padding-left: .55rem;
+            padding-right: .55rem;
             height: 16rem;
             overflow-y: auto;
             .category_right_li {
                 @include fj;
                 height: 1.8rem;
                 line-height: 1.8rem;
-                padding-right: 0.5rem;
-                border-bottom: 0.025rem solid $bc;
+                padding-right: 0.55rem;
+                border-bottom: 1px solid $border-color;
                 display: flex;
                 align-items: center;
                 span {
-                    color: #666;
+                    color: $font-color1;
                 }
                 svg {
-                    @include wh(0.6rem, 0.6rem);
+                    @include wh(0.55rem, 0.55rem);
                 }
             }
             .category_right_choosed {
@@ -545,19 +545,20 @@ small{
             display: flex;
             align-items: center;
             svg {
-                @include wh(0.7rem, 0.7rem);
-                margin: 0 .3rem 0 .8rem;
+                @include wh(0.65rem, 0.65rem);
+                margin: 0 .55rem 0 .55rem;
             }
             p {
                 line-height: 2.5rem;
                 flex: auto;
+                margin-left: -.275rem;
                 text-align: left;
-                text-indent: 0.25rem;
-                border-bottom: 0.025rem solid $bc;
+                text-indent: 0.275rem;
+                border-bottom: 1px solid $border-color;
                 @include fj;
                 align-items: center;
                 span {
-                    color: #666;
+                    color: $font-color1;
                 }
             }
             .sort_select {
@@ -570,48 +571,36 @@ small{
     .filter_container {
         flex-direction: column;
         align-items: flex-start;
-        min-height: 10.6rem;
-        background-color: #f1f1f1;
+        background-color: $background-color;
         .filter_header_style {
-            @include sc(0.4rem, #333);
-            line-height: 1.5rem;
-            height: 1.5rem;
+            @include indent10();
+            @include sc(.45rem, $font-color1);
             text-align: left;
-            padding-left: .5rem;
-            background-color: #fff;
+            background-color: $background-light-color;
         }
         .filter_ul {
             display: flex;
             flex-wrap: wrap;
-            padding: 0 0.5rem;
-            background-color: #fff;
+            padding: 0 .55rem;
+            background-color: $background-light-color;
             .filter_li {
                 display: flex;
                 align-items: center;
-                border: 0.025rem solid #eee;
+                border: 1px solid $border-color;
                 @include wh(4.7rem, 1.4rem);
-                margin-right: 0.25rem;
+                margin-right: 0.275rem;
                 border-radius: 0.125rem;
-                padding: 0 0.25rem;
-                margin-bottom: 0.25rem;
+                padding: 0 0.275rem;
+                margin-bottom: 0.275rem;
                 svg {
                     @include wh(.8rem, .8rem);
                     margin-right: 0.125rem;
                 }
                 span {
-                    @include sc(0.4rem, #333);
-                }
-                .filter_icon {
-                    @include wh(.8rem, .8rem);
-                    font-size: 0.5rem;
-                    border: 0.025rem solid $bc;
-                    border-radius: 0.15rem;
-                    margin-right: 0.25rem;
-                    line-height: .8rem;
-                    text-align: center;
+                    @include sc(0.45rem, $font-color);
                 }
                 .activity_svg {
-                    margin-right: .25rem;
+                    margin-right: .275rem;
                 }
                 .selected_filter {
                     color: $blue;
@@ -620,9 +609,9 @@ small{
         }
         .confirm_filter {
             display: flex;
-            background-color: #f1f1f1;
+            background-color: $background-color;
             width: 100%;
-            padding: .3rem .2rem;
+            padding: .55rem;
             .filter_button_style {
                 @include wh(50%, 1.8rem);
                 font-size: 0.8rem;
@@ -630,16 +619,14 @@ small{
                 border-radius: 0.2rem;
             }
             .clear_all {
-                background-color: #fff;
+                background-color: $background-light-color;
                 margin-right: .5rem;
-                border: 0.025rem solid #fff;
             }
             .confirm_select {
                 background-color: #56d176;
-                color: #fff;
-                border: 0.025rem solid #56d176;
+                color: $blue-font-color;
                 span {
-                    color: #fff;
+                    color: $blue-font-color;
                 }
             }
         }
