--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -140,7 +140,7 @@ small{
 }
 
 .page{
-    z-index: 200;
+    z-index: 20;
     background-color: $background-color;
     p, span{
         font-family: Helvetica Neue,Tahoma,Arial;
@@ -702,7 +702,7 @@ small{
 
 .router-slid-enter,
 .router-slid-leave-active {
-    transform: translate3d(2rem, 0, 0);
+    // transform: translate3d(2rem, 0, 0);
     opacity: 0;
 }
 
