完成退货确认页面

--- a/src/style/order.scss
+++ b/src/style/order.scss
@@ -5,7 +5,7 @@
     @include fj;
     align-items: center;
     @include indent10;
-    background: url(../../../images/address_bottom.png) left bottom repeat-x;
+    background: url(/src/images/address_bottom.png) left bottom repeat-x;
     background-color: $background-light-color;
     background-size: auto .12rem;
     .address_empty_left {
